[mod] basex 10.7